--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="section">
             <img src="LOGIN.png" width="150px">
             <h3>Website Biodata</h3>
-            <p>Membuat desain Keroppi menggunakan HTML dan CSS dengan fokus pada kemiripan versi aslinya.</p>
+            <p>Website biodata ini menggunakan menggunakan HTML, CSS, PHP, serta database MySQL.</p>
         </div>
         <div class="section">
             <img src="REGISTER TOKPED.png" width="150px">
@@ -102,4 +102,5 @@
     </div>
 </footer>
 </body>
+
 </html>
