--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="about-container">
         <img src="raynarIMG.jpg" class="about-img">
         <p class="about-text">
-            Perkenalkan, saya Raynar Damario Wicaksono, seorang pelajar dari SMK Citra Negara yang menekuni jurusan PPLG (Pengembangan Perangkat Lunak dan Gim). Minat saya berada pada dunia Web Development dan perkembangan teknologi masa kini. Saya telah mempelajari HTML, CSS, dan PHP pada tingkat dasar hingga menengah dan terus berusaha meningkatkan kemampuan. Tujuan saya adalah membuat website yang modern, responsif, dan memiliki tampilan yang menarik sekaligus fungsional.
+            Perkenalkan, saya Raynar Damario Wicaksono, seorang pelajar dari SMK Citra Negara yang menekuni jurusan PPLG (Pengembangan Perangkat Lunak dan Gim). Minat saya berada pada dunia Web Development dan perkembangan teknologi masa kini. Saya telah mempelajari <span>HTML</span>,<span>CSS</span>, dan <span>PHP</span> pada tingkat dasar hingga menengah dan terus berusaha meningkatkan kemampuan. Tujuan saya adalah membuat website yang modern, responsif, dan memiliki tampilan yang menarik sekaligus fungsional.
         </p>
     </div>
     <div class="school-logos">
@@ -104,3 +104,4 @@
 </body>
 
 </html>
+
