--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <h3>Register Tokopedia</h3>
             <p>Membuat duplikasi halaman Register Tokopedia dengan menggunakan HTML dan CSS.</p>
         </div>
+        <div class="section">
+            <img src="Gundam.jpg" height="250px">
+            <h3>Merakit Gundam</h3>
+            <p>Proyek Gundam dengan fokus pada detail, kerapian, dan teknik penyusunan secara profesional.</p>
+        </div>
     </div>
 </section>
 <footer class="footer">
@@ -104,4 +109,3 @@
 </body>
 
 </html>
-
